libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__reference_inflight_field.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    class Foo {\n      inflight x: str;\n      \n      inflight init() {\n        this.x = \"hello\";\n      }\n    \n      inflight method() {\n        this.x;\n      }\n    }\n    \"#)"
---
======================================================
Files:

inflight.Foo.js
------------------------------------------------------
module.exports = function({  }) {
  class Foo {
    async $inflight_init()  {
      this.x = "hello";
    }
    async method()  {
      this.x;
    }
    constructor({  }) {
    }
  }
  return Foo;
}

preflight.js
------------------------------------------------------
class Foo extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("method", "x");
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.Foo.js")({ 
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${Foo._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}

