libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__reference_inflight_static.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    class MyType {\n      static inflight staticMethod(): str {}\n    }\n\n    test \"test\" {\n      log(MyType.staticMethod());\n    }\n    \"#)"
---

    class MyType {
      static inflight staticMethod(): str {}
    }

    test "test" {
      log(MyType.staticMethod());
    }
    
======================================================
Class: MyType

======================================================
Class: $Closure1
Types:
  MyType = MyType

